# OkapiCppConnector

./: .gitignore  CMakeLists.txt  README.md
OkapiCppConnector/: tutorial.odt
OkapiCppConnector/okapi_lib/src/: okapiConnector.h
src/: CMakeLists.txt  OkapiConnector.cpp  OkapiConnector.h  OkapiConnectorTest.cpp  okapiConnector.cpp  okapiConnector.h
